# Descargas-Ordenada

./: .gitignore  ARREGLADO_FINAL.txt  CHANGELOG.md  COMO_USAR.md  COMO_USAR_v3.1.txt  COMPLETADO_v3.1.txt  CREAR_PORTABLES.md  DescargasOrdenadas.iss  DescargasOrdenadas.lnk  DescargasOrdenadas.spec  FORZAR_INTEGRACION_GUI.py  GUIA_COMPLETA_v3.1.txt  GUIA_RAPIDA_v3.2.txt  INICIAR.bat  INICIAR.py  INICIAR_SIN_CONSOLA.pyw  INICIO_RAPIDO.md  INICIO_RAPIDO.txt  INSTALAR.py  INSTALAR_DEPENDENCIAS.bat  INSTRUCCIONES_FINALES.txt  INSTRUCCIONES_PORTABLE.md  LEEME_PRIMERO.md  LICENSE  MEJORAS_IMPLEMENTADAS.md  MEJORAS_v3.0.md  NOVEDADES_v3.1.md  PRUEBAS_v3.1.py  README.md  RESUMEN_COMPLETO_v3.2.md  RESUMEN_MEJORAS.txt  SUBIR_A_GITHUB.bat  build.py  integrar_v3.1_en_gui.py  main.py  mypy.ini  pyproject.toml  requirements.txt  test_bandeja.py  win_manifest.xml
.config/: organized.json
.system/: create_mushroom_icon.py  test_organizer.py
docs/: ACTUALIZACIONES.md  BANDEJA_SISTEMA.md  CAMBIOS_REALIZADOS.txt  ESTADO_FINAL_v3.2.txt  ESTRATEGIA_GITHUB.txt  LEEME.txt  MEJORAS_FINALES_v3.2.txt  PUBLICAR_EN_GITHUB.md  RESUMEN_FINAL_COMPLETO.txt  RESUMEN_FINAL_v3.1.txt  RESUMEN_REGENERACION_v3.1.txt
installer/: Instalar.bat  README.txt  crear_instalador.bat  setup.bat
linux/: DescargasOrdenadas.sh  INICIAR.sh  INSTRUCCIONES.md
macos/: DescargasOrdenadas.command  INICIAR.sh  INSTRUCCIONES.md
organizer/: INICIAR.py  __init__.py  actualizaciones.py  actualizaciones_mejorado.py  ai_categorizer.py  autostart.py  context_menu.py  custom_rules.py  date_organizer.py  duplicate_detector.py  (+11 more)
(+18 files in other folders)
