[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "PT", "Q"]
ignore = ["E203", "E501", "PT013"]

[tool.ruff.isort]
known-first-party = ["organizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 